I made the header which has the input field nested in it has a fixed position.// and the body tag has a top margin property with a value for the images to be fully visible.
added a header tag with a class of main-head// also i added a class to
the unordered list called pic-nav.//

in grey coupon there is a clear fix class that I added // added styles
to the input field ordered the pics how the mock up looks almost still
fixing that. made the lattice 100% in width.

--- a/css/grey_poupon.css
+++ b/css/grey_poupon.css
@@ -9,33 +9,64 @@
 			
 			body {
 				margin: 0;
+				margin-top: 120px;
 			}
 			
-			 .lattice {
-				 border: 1px solid tomato;
+				 border: 1px solid green;
+				 width: 100%;
 				 margin: 0 auto;
-				 width: 1100px; 
+				 
 				 
 				
 			 }
+			 
 			
-			#search-nav {
-		     border: 1px solid teal;
-			 margin: 0 auto;
-			 text-align: center;
-			}
-			
-			
-			input[type="text"] {
-				display: inline-block;
-				text-align: center;
-				margin-top: 30px;
-				margin-bottom: 30px;
-				width: 60%;
-				padding: 8px;
-			
-				
-			}
-			
+				  
+			 header {
+				  position: fixed;
+				  width: 100%;
+				  background-color: #fff;
+				   border: 1px solid red;
+				  top: 0;
+				   text-align: center;
+				 
+				  }
+				  
+					  .photo-container {
+						border: 1px solid black;
+					  width: 980px;	
+					  margin: 0 auto;
+					  padding: 10px;
+					  
+					}
+				  
+				  
+								input[type="text"] {
+									display: inline-block;
+									
+									margin-top: 30px;
+									margin-bottom: 30px;
+									width: 40%;
+									padding: 8px;
+								}
+								
+								.pic-nav,
+								li,
+								li img {
+									display: inline-block;
+									float: left;
+								    
+									margin-left: 30px;
+									
+									
+								}
+								
+								.clearfix:before {
+								 content: "";
+								 display: table;
+								 clear: both;	
+									
+								}
+				  
 				
 			
